loader correction z-index

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -20,22 +20,24 @@ body {
 
 .loader {
     position: fixed;
-    z-index: 1000;
     left: 0;
     top: 0;
     right: 0;
     bottom: 0;
     height: 100vh;
     background: linear-gradient(to bottom, var(--pink), var(--purple));
-    animation: loader 5s;
+    animation: loader 10s;
 }
 
 @keyframes loader {
     0% {
+        transform: scale(1);
         opacity: 1;
+        z-index: 1000;
     }
 
     100% {
+        transform: scale(0);
         opacity: 0%;
         z-index: -1000;
     }
@@ -55,11 +57,11 @@ body {
 }
 
 .animation-loader {
-    animation: animation-loader 10s;
+    animation: animation-loader-rotation 10s;
     transform: rotate(0);
 }
 
-@keyframes animation-loader {
+@keyframes animation-loader-rotation {
     0% {
         opacity: 1;
         transform: rotate(360deg);
@@ -68,6 +70,7 @@ body {
     100% {
         opacity: 0;
         transform: rotate(0deg);
+        
 
     }
 }
